# api/openapi.yaml
@@ -80,6 +80,9 @@ paths:
         "401":
           $ref: "#/components/responses/Unauthorized"
         
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        
         "404":
           $ref: "#/components/responses/NotFound"
         
@@ -111,6 +114,9 @@ paths:
 
         "401":
           $ref: "#/components/responses/Unauthorized"
+        
+        "403":
+          $ref: "#/components/responses/Forbidden"
         
         "404":
           $ref: "#/components/responses/NotFound"
